package com.publicissapient.tondeuse.domain.Configuration.Providers.StringConfigurationParser;

public class ConfigurationFormatException extends Exception {
    public ConfigurationFormatException(String message, Throwable cause){
        super(message,cause);
    }

}
